--- a/day1/day1.ipynb
+++ b/day1/day1.ipynb
@@ -342,7 +342,7 @@
    "hash": "de7c405ac74a7c5571d216e0633ceefdaa081ede9185a5d55588f1922b987c2f"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -356,10 +356,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.5"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
