--- a/day3/day3.ipynb
+++ b/day3/day3.ipynb
@@ -44,6 +44,173 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Values</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>101111101000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>110110011100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10111111000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10101000001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11000000001</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Values\n",
+       "0  101111101000\n",
+       "1  110110011100\n",
+       "2   10111111000\n",
+       "3   10101000001\n",
+       "4   11000000001"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "df = pd.read_csv('input_day3.txt').astype(\"string\") # No numbers please, strings\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Turns out the MSB's zeroes are not present, first correct that\n",
+    "values = df['Values'].tolist()\n",
+    "\n",
+    "# Find the longest string with a comprehension\n",
+    "longest = max((len(x) for x in values))\n",
+    "\n",
+    "# Add the required number of leading zeroes\n",
+    "for i in range(len(values)):\n",
+    "    length = len(values[i])\n",
+    "    values[i] = (longest-length) * '0' + values[i]\n",
+    "\n",
+    "# Control that everything went correctly\n",
+    "outliers = [x for x in values if len(x) != longest]\n",
+    "assert len(outliers) == 0, f\"Oh no, some elements have not a size of {{longest}}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can now get started with the job\n",
+    "# Transpose a list of string\n",
+    "def transpose(array):\n",
+    "    res = []    \n",
+    "    # Columns\n",
+    "    for column in range(len(array[0])):\n",
+    "        # Lines\n",
+    "        tmp = []            \n",
+    "        for ligne in range(len(array)):\n",
+    "            tmp.append(array[ligne][column])\n",
+    "\n",
+    "        res.append(tmp)\n",
+    "    return res\n",
+    "\n",
+    "#transposed = transpose(['111', '100', '101', '001'])\n",
+    "transposed = transpose(values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gamma = 3811, epsilon = 284\n",
+      "Product is 1082324\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert a list to a string\n",
+    "def list2string(list):\n",
+    "    return ''.join([elem for elem in list])\n",
+    "\n",
+    "# Get the prevalent one or zero from a list\n",
+    "def mostPresent(x):    \n",
+    "    ones = len([elem for elem in x if elem == '1'])\n",
+    "    zeroes = len([elem for elem in x if elem == '0'])\n",
+    "    assert (zeroes + ones) == len(x)\n",
+    "    return '1' if ones > zeroes else '0'\n",
+    "\n",
+    "transposedAsString = [list2string(elem) for elem in transposed]\n",
+    "mostPresentBits = [mostPresent(elem) for elem in transposedAsString]\n",
+    "\n",
+    "# Convert to a number epsilon\n",
+    "epsilon = int(''.join([x for x in mostPresentBits]), 2)\n",
+    "\n",
+    "# Compute gamma as every bit inverted\n",
+    "tmp = []\n",
+    "for x in mostPresentBits:   \n",
+    "    tmp.append('1' if x == '0' else '0')    \n",
+    "\n",
+    "# Convert to number\n",
+    "gamma = int(''.join([x for x in tmp]), 2)\n",
+    "\n",
+    "print(f\"Gamma = {gamma}, epsilon = {epsilon}\")\n",
+    "print(f\"Product is {gamma * epsilon}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -51,8 +218,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "e44b2979406394fc03848afa59efd3f0817add3a48155423202967fc07710fe0"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.5 64-bit ('base': conda)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.5"
   },
   "orig_nbformat": 4
  },
