--- a/day3/day3.ipynb
+++ b/day3/day3.ipynb
@@ -121,9 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 156,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['110110011100', '010111111000', '010101000001', '011000000001']\n"
+     ]
+    }
+   ],
    "source": [
     "# Turns out the MSB's zeroes are not present, first correct that\n",
     "values = df['Values'].tolist()\n",
@@ -138,7 +146,9 @@
     "\n",
     "# Control that everything went correctly\n",
     "outliers = [x for x in values if len(x) != longest]\n",
-    "assert len(outliers) == 0, f\"Oh no, some elements have not a size of {{longest}}\""
+    "assert len(outliers) == 0, f\"Oh no, some elements have not a size of {{longest}}\"\n",
+    "\n",
+    "print(values[1:5])"
    ]
   },
   {
@@ -210,11 +220,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Part Two\n",
+    "\n",
+    "Next, you should verify the **life support rating**, which can be determined by multiplying the **oxygen generator** rating by the **CO2 scrubber rating**.\n",
+    "\n",
+    "Both the oxygen generator rating and the CO2 scrubber rating are values that can be found in your diagnostic report - finding them is the tricky part. Both values are located using a similar process that involves filtering out values until only one remains. Before searching for either rating value, start with the full list of binary numbers from your diagnostic report and **consider just the first bit** of those numbers. Then:\n",
+    "\n",
+    "- Keep only numbers selected by the bit criteria for the type of rating value for which you are searching. Discard numbers which do not match the bit criteria.\n",
+    "- If you only have one number left, stop; this is the rating value for which you are searching.\n",
+    "- Otherwise, repeat the process, considering the next bit to the right.\n",
+    "\n",
+    "\n",
+    "The bit criteria depends on which type of rating value you want to find:\n",
+    "\n",
+    "- To find oxygen generator rating, determine the most common value (0 or 1) in the current bit position, and keep only numbers with that bit in that position. If 0 and 1 are equally common, keep values with a 1 in the position being considered.\n",
+    "- To find CO2 scrubber rating, determine the least common value (0 or 1) in the current bit position, and keep only numbers with that bit in that position. If 0 and 1 are equally common, keep values with a 0 in the position being considered.\n",
+    "\n",
+    "For example, to determine the **oxygen generator rating** value using the same example diagnostic report from above:\n",
+    "\n",
+    "- Start with all 12 numbers and consider only the first bit of each number. There are more 1 bits (7) than 0 bits (5), so keep only the 7 numbers with a 1 in the first position: 11110, 10110, 10111, 10101, 11100, 10000, and 11001.\n",
+    "- Then, consider the second bit of the 7 remaining numbers: there are more 0 bits (4) than 1 bits (3), so keep only the 4 numbers with a 0 in the second position: 10110, 10111, 10101, and 10000.\n",
+    "- In the third position, three of the four numbers have a 1, so keep those three: 10110, 10111, and 10101.\n",
+    "- In the fourth position, two of the three numbers have a 1, so keep those two: 10110 and 10111.\n",
+    "- In the fifth position, there are an equal number of 0 bits and 1 bits (one each). So, to find the oxygen generator rating, keep the number with a 1 in that position: 10111.\n",
+    "- As there is only one number left, stop; the oxygen generator rating is 10111, or 23 in decimal.\n",
+    "\n",
+    "Then, to determine the **CO2 scrubber rating**  value from the same example above:\n",
+    "\n",
+    "- Start again with all 12 numbers and consider only the first bit of each number. There are fewer 0 bits (5) than 1 bits (7), so keep only the 5 numbers with a 0 in the first position: 00100, 01111, 00111, 00010, and 01010.\n",
+    "- Then, consider the second bit of the 5 remaining numbers: there are fewer 1 bits (2) than 0 bits (3), so keep only the 2 numbers with a 1 in the second position: 01111 and 01010.\n",
+    "- In the third position, there are an equal number of 0 bits and 1 bits (one each). So, to find the CO2 scrubber rating, keep the number with a 0 in that position: 01010.\n",
+    "- As there is only one number left, stop; the CO2 scrubber rating is 01010, or 10 in decimal.\n",
+    "\n",
+    "Finally, to find the life support rating, multiply the oxygen generator rating (23) by the CO2 scrubber rating (10) to get 230.\n",
+    "\n",
+    "Use the binary numbers in your diagnostic report to calculate the oxygen generator rating and CO2 scrubber rating, then multiply them together. **What is the life support rating of the submarine?** (Be sure to represent your answer in decimal, not binary.)"
+   ]
   }
  ],
  "metadata": {
