Adding some functional code, Python style (yikes)

--- a/day4/day4.ipynb
+++ b/day4/day4.ipynb
@@ -65,10 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from functools import reduce\n",
+    "\n",
     "DIM = 5\n",
     "\n",
     "class Value:\n",
@@ -120,15 +122,11 @@
     "\n",
     "        return False                    \n",
     "\n",
-    "    def sumUnmarked(self):\n",
-    "        total = 0\n",
-    "        for i in range(len(self.table)):            \n",
-    "            for j in range(len(self.table[i])):\n",
-    "                elem = self.table[i][j]\n",
-    "\n",
-    "                if(elem.present == False):\n",
-    "                    total = total + elem.value\n",
-    "        return total\n",
+    "    def sumUnmarked(self):        \n",
+    "        # Flatten the list\n",
+    "        flattened = reduce(lambda x, y: x+y, self.table)\n",
+    "        # Add all the values if present\n",
+    "        return reduce(lambda x, y: x + (y.value if y.present == False else 0), flattened, 0)        \n",
     "\n",
     "    # toString equivalent\n",
     "    def __str__(self):\n",
@@ -141,12 +139,12 @@
     "                    r = r + '  '                \n",
     "                    \n",
     "            r = r + '\\n'\n",
-    "        return r\n"
+    "        return r"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -206,11 +204,9 @@
     "\n",
     "    # Remove trailing \\n and spaces as well as spaces in the middle\n",
     "    for i in range(len(r)):        \n",
-    "        r[i] = r[i].strip(' \\n')\n",
     "        r[i] = \" \".join(r[i].split())\n",
     "\n",
-    "    aBoard = createBoard(r)\n",
-    "    boards.append(aBoard)\n",
+    "    boards.append(createBoard(r))\n",
     "\n",
     "    # Skip empty line at the end of each board\n",
     "    f.readline()\n",
@@ -229,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,12 +254,14 @@
     "# boards[0].checkPresent(59)\n",
     "# boards[0].checkPresent(74)\n",
     "# boards[0].checkPresent(50)\n",
-    "# boards[0].isComplete()"
+    "# boards[0].isComplete()\n",
+    "# print(boards[0])\n",
+    "# boards[0].sumUnmarked()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
