Let's do it again with a reduce, and stop.

--- a/day4/day4.ipynb
+++ b/day4/day4.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -327,12 +327,7 @@
     "                board.completionTurn = i\n",
     "                board.latestValue = value_drawn\n",
     "\n",
-    "latestTurn = 0    \n",
-    "latestBoard = None\n",
-    "for board in boards:\n",
-    "    if board.completionTurn > latestTurn:\n",
-    "        latestTurn = board.completionTurn\n",
-    "        latestBoard = board\n",
+    "latestBoard = reduce(lambda left, right: left if left.completionTurn > right.completionTurn else right, boards, boards[0])\n",
     "\n",
     "print(f'Latest sum of unmarked values is {latestBoard.sumUnmarked()} and last drawn values is {latestBoard.latestValue}')\n",
     "print(f'Value to report is {latestBoard.sumUnmarked() * latestBoard.latestValue}')    \n",
