--- a/day4/day4.ipynb
+++ b/day4/day4.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,29 +95,19 @@
     "                    return        \n",
     "\n",
     "    def isComplete(self):\n",
-    "        # Check lines\n",
     "        for i in range(len(self.table)):\n",
-    "            total = 0\n",
+    "            totalR  = 0\n",
+    "            totalC  = 0\n",
     "            for j in range(len(self.table[i])):\n",
-    "                elem = self.table[i][j]\n",
+    "                elemR = self.table[i][j]\n",
+    "                elemC = self.table[j][i]\n",
     "\n",
-    "                if(elem.present):\n",
-    "                    total = total + 1\n",
+    "                if(elemR.present):\n",
+    "                    totalR = totalR + 1\n",
+    "                if(elemC.present):\n",
+    "                    totalC = totalC + 1\n",
     "\n",
-    "                if total == self.dim:\n",
-    "                    return True\n",
-    "\n",
-    "\n",
-    "        # Check columns\n",
-    "        for i in range(len(self.table)):\n",
-    "            total = 0\n",
-    "            for j in range(len(self.table[i])):\n",
-    "                elem = self.table[j][i]\n",
-    "\n",
-    "                if(elem.present):\n",
-    "                    total = total + 1\n",
-    "\n",
-    "                if total == self.dim:\n",
+    "                if totalR == self.dim or totalC == self.dim:\n",
     "                    return True\n",
     "\n",
     "        return False                    \n",
@@ -144,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -172,8 +162,6 @@
     "# Skip the empty line\n",
     "f.readline()\n",
     "\n",
-    "# Create the list of boards\n",
-    "\n",
     "# Create a board from a list(list(int))\n",
     "def createBoard(lines):\n",
     "    assert len(lines) == DIM\n",
@@ -189,6 +177,7 @@
     "    \n",
     "    return b\n",
     "\n",
+    "# Create the list of boards\n",
     "boards = [] \n",
     "\n",
     "while True:    \n",
@@ -217,54 +206,23 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Checking cell validation"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 254,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Board 45 has been completed\n",
+      "Sum of unmarked values is 919 and last drawn values is 49\n",
+      "Value to report is 45031\n"
+     ]
+    }
+   ],
    "source": [
-    "# print('Checking presence behaviour\\n')\n",
-    "# boards[0].checkPresent(2)\n",
-    "# print(boards[0])\n",
-    "# boards[0].checkPresent(27)\n",
-    "# print(boards[0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Checking board validation (vertical and horizontal)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 221,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# boards[0].checkPresent(63)\n",
-    "# boards[0].checkPresent(64)\n",
-    "# boards[0].checkPresent(59)\n",
-    "# boards[0].checkPresent(74)\n",
-    "# boards[0].checkPresent(50)\n",
-    "# boards[0].isComplete()\n",
-    "# print(boards[0])\n",
-    "# boards[0].sumUnmarked()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 222,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "boards_copy = boards\n",
+    "\n",
     "# Play every value until complete\n",
     "def winner():\n",
     "    for value_drawn in drawn:\n",
@@ -275,10 +233,10 @@
     "                print(f'Board {i} has been completed')\n",
     "                print(f'Sum of unmarked values is {board.sumUnmarked()} and last drawn values is {value_drawn}')\n",
     "                print(f'Value to report is {board.sumUnmarked() * value_drawn}')\n",
-    "                return True\n",
-    "    return False\n",
+    "                return\n",
+    "    return\n",
     "\n",
-    "# winner()"
+    "winner()"
    ]
   },
   {
@@ -297,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -317,6 +275,8 @@
     }
    ],
    "source": [
+    "boards = boards_copy\n",
+    "\n",
     "i = 0\n",
     "for value_drawn in drawn:        \n",
     "    i = i + 1\n",
