--- a/day4/day4.ipynb
+++ b/day4/day4.ipynb
@@ -95,6 +95,7 @@
     "                    return        \n",
     "\n",
     "    def isComplete(self):\n",
+    "        # As the array has a square size, we can do line and cols simulatenously\n",
     "        for i in range(len(self.table)):\n",
     "            totalR  = 0\n",
     "            totalC  = 0\n",
@@ -112,9 +113,8 @@
     "\n",
     "        return False                    \n",
     "\n",
-    "    def sumUnmarked(self):        \n",
-    "        # Flatten the list\n",
-    "        flattened = reduce(lambda x, y: x+y, self.table)\n",
+    "    def sumUnmarked(self):                \n",
+    "        flattened = reduce(lambda x, y: x+y, self.table) # Flatten the list\n",
     "        # Add all the values if present\n",
     "        return reduce(lambda x, y: x + (y.value if y.present == False else 0), flattened, 0)        \n",
     "\n",
