--- a/day3/day3.ipynb
+++ b/day3/day3.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "># Day 3 - Binary diagnostic\n",
-    ">\n",
+    ">from [AdventOfCode website](https://adventofcode.com/2021])\n",
+    "\n",
     ">The submarine has been making some odd creaking noises, so you ask it to produce a diagnostic report just in case.\n",
     ">\n",
     ">The diagnostic report (your puzzle input) consists of a list of binary numbers which, when decoded properly, can tell you many useful things about the conditions of the submarine. The first parameter to check is the power consumption.\n",
