--- a/day4/day4.ipynb
+++ b/day4/day4.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "># Day 3 - Giant squid\n",
-    ">\n",
+    "from [AdventOfCode website](https://adventofcode.com/2021])\n",
     "\n",
     "You're already almost 1.5km (almost a mile) below the surface of the ocean, already so deep that you can't see any sunlight. What you can see, however, is a giant squid that has attached itself to the outside of your submarine.\n",
     "\n",
