Cleaning up things

--- a/day6/day6.ipynb
+++ b/day6/day6.ipynb
@@ -66,10 +66,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Parsing the file as always\n",
     "import pandas as pd\n",
     "import re\n",
     "\n",
@@ -88,19 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for finding part 1 was 0:00:00.957683\n",
-      "377263\n"
+      "5,1,1,5,4,2,1,2,1,2,2,1,1,1,4,2,2,4,1,1,1,1,1,4,1,1,1,1,1,5,3,1,4,1,1,1,1,1,4,1,5,1,1,1,4,1,2,2,3,1,5,1,1,5,1,1,5,4,1,1,1,4,3,1,1,1,3,1,5,5,1,1,1,1,5,3,2,1,2,3,1,5,1,1,4,1,1,2,1,5,1,1,1,1,5,4,5,1,3,1,3,3,5,5,1,3,1,5,3,1,1,4,2,3,3,1,2,4,1,1,1,1,1,1,1,2,1,1,4,1,3,2,5,2,1,1,1,4,2,1,1,1,4,2,4,1,1,1,1,4,1,3,5,5,1,2,1,3,1,1,4,1,1,1,1,2,1,1,4,2,3,1,1,1,1,1,1,1,4,5,1,1,3,1,1,2,1,1,1,5,1,1,1,1,1,3,2,1,2,4,5,1,5,4,1,1,3,1,1,5,5,1,3,1,1,1,1,4,4,2,1,2,1,1,5,1,1,4,5,1,1,1,1,1,1,1,1,1,1,3,1,1,1,1,1,4,2,1,1,1,2,5,1,4,1,1,1,4,1,1,5,4,4,3,1,1,4,5,1,1,3,5,3,1,2,5,3,4,1,3,5,4,1,3,1,5,1,4,1,1,4,2,1,1,1,3,2,1,1,4\n"
      ]
     }
    ],
    "source": [
+    "# Let's over engineer this part with lots of classes and stuff, because we can\n",
+    "\n",
     "class Fish:\n",
     "    def __init__(self, timer_start):\n",
     "        self.timer = timer_start\n",
@@ -142,16 +144,44 @@
     "\n",
     "fishes = School.create_initial(initial_state)\n",
     "\n",
+    "print(fishes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the classes and data loaded, we can now run our crappy algorithm which is nice from a code perspective but terrible in performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time for finding part 1 was 0:00:01.070053\n",
+      "Solution of part 1 is 377263\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's runt the code\n",
     "from datetime import datetime\n",
     "\n",
     "start = datetime.now()\n",
+    "\n",
     "for i in range(80):    \n",
     "    fishes.day_gone()\n",
     "\n",
     "end = datetime.now()\n",
     "diff = end-start\n",
+    "\n",
     "print(f'Time for finding part 1 was {diff}')            \n",
-    "print(fishes.nFishes())"
+    "print(f'Solution of part 1 is {fishes.nFishes()}')"
    ]
   },
   {
@@ -185,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +232,7 @@
        "Text(0.5, 1.0, 'Fishes in the sea')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
