--- a/day6/day6.ipynb
+++ b/day6/day6.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 6\n",
+    "# Day 6 - Lanternfish\n",
     "from [AdventOfCode website](https://adventofcode.com/2021])\n",
     "\n",
     "The sea floor is getting steeper. Maybe the sleigh keys got carried this way?\n",
