Adding day 7 begin

--- a/day6/day6.ipynb
+++ b/day6/day6.ipynb
@@ -189,6 +189,10 @@
    "metadata": {},
    "source": [
     "# Part 2\n",
+    "> Suppose the lanternfish live forever and have unlimited food and space. Would they take over the entire ocean?\n",
+    "> After 256 days in the example above, there would be a total of 26984457539 lanternfish!\n",
+    "> How many lanternfish would there be ?\n",
+    "\n",
     "The first part was done using a nice OO solution mainly used for the sake of using OO with Python once. However, performance is terrible as more days have to be simulated because growth is quadratic at least (which can be seen in the graph)\n",
     "\n",
     "## Why isn't working wih the solution from point 1?\n",
