Day 7 done in less than 5 minutes. Too easy.

--- a/day7/day7.ipynb
+++ b/day7/day7.ipynb
@@ -44,11 +44,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remarks about the implementation\n",
+    "This one is probably one of the easiest problem, at least for part 1.\n",
+    "Part 2 is easy as well as long as you know you maths."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Parsing the file as always\n",
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "# Simple example\n",
+    "ex_positions = [16,1,2,0,4,2,7,1,2,14]\n",
+    "\n",
+    "# Full data\n",
+    "positions = []\n",
+    "\n",
+    "def parse_raw_data(raw_data):\n",
+    "    l = []\n",
+    "    for match in re.findall(r\"\\d+\", raw_data):\n",
+    "        l.append(int(match))\n",
+    "    return l\n",
+    "\n",
+    "with open(\"input_day7.txt\") as fp:\n",
+    "    lines = fp.read()\n",
+    "    positions = parse_raw_data(lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "343605"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compute_fuel_to(final, positions):\n",
+    "    sum = 0\n",
+    "    for p in positions:\n",
+    "        sum += abs(p - final)\n",
+    "    return sum\n",
+    "\n",
+    "def find_min(positions, fun):\n",
+    "    distances = []\n",
+    "    for i in range(len(positions)):\n",
+    "        cost = fun(i, positions)\n",
+    "        distances.append(cost)\n",
+    "    return min(distances)\n",
+    "\n",
+    "#compute_fuel_to(2, positions)\n",
+    "find_min(positions, compute_fuel_to)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "96744904"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compute_fuel_to_part2(final, positions):\n",
+    "    sum = 0\n",
+    "    for p in positions:\n",
+    "        n = abs(p - final)        \n",
+    "        sum += (n * (n + 1)) / 2 # Hey, look ! The triangular number\n",
+    "    return sum\n",
+    "\n",
+    "int(find_min(positions, compute_fuel_to_part2))"
+   ]
   }
  ],
  "metadata": {
@@ -61,7 +151,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.5"
   },
   "orig_nbformat": 4
