--- a/day2/day2.ipynb
+++ b/day2/day2.ipynb
@@ -190,7 +190,7 @@
     "\n",
     "print(depth)\n",
     "print(pos)\n",
-    "print(f\"Multipled value is {pos * depth}\")"
+    "print(f\"Multiplied value is {pos * depth}\")"
    ]
   },
   {
@@ -270,7 +270,7 @@
     "\n",
     "print(depth)\n",
     "print(pos)\n",
-    "print(f\"Multipled value is {pos * depth}\")"
+    "print(f\"Multiplied value is {pos * depth}\")"
    ]
   },
   {
