--- a/day10/day10.ipynb
+++ b/day10/day10.ipynb
@@ -6,103 +6,26 @@
    "source": [
     "# Day 8: Seven Segment Search\n",
     "from [AdventOfCode website](https://adventofcode.com/2021])\n",
-    "\n",
-    "You barely reach the safety of the cave when the whale smashes into the cave mouth, collapsing it. Sensors indicate another exit to this cave at a much greater depth, so you have no choice but to press on.\n",
-    "\n",
-    "As your submarine slowly makes its way through the cave system, you notice that the four-digit seven-segment displays in your submarine are malfunctioning; they must have been damaged during the escape. You'll be in a lot of trouble without them, so you'd better figure out what's wrong.\n",
-    "\n",
-    "Each digit of a seven-segment display is rendered by turning on or off any of seven segments named a through g:\n",
-    "\n",
-    "```\n",
-    "  0:      1:      2:      3:      4:\n",
-    " aaaa    ....    aaaa    aaaa    ....\n",
-    "b    c  .    c  .    c  .    c  b    c\n",
-    "b    c  .    c  .    c  .    c  b    c\n",
-    " ....    ....    dddd    dddd    dddd\n",
-    "e    f  .    f  e    .  .    f  .    f\n",
-    "e    f  .    f  e    .  .    f  .    f\n",
-    " gggg    ....    gggg    gggg    ....\n",
-    "\n",
-    "  5:      6:      7:      8:      9:\n",
-    " aaaa    aaaa    aaaa    aaaa    aaaa\n",
-    "b    .  b    .  .    c  b    c  b    c\n",
-    "b    .  b    .  .    c  b    c  b    c\n",
-    " dddd    dddd    ....    dddd    dddd\n",
-    ".    f  e    f  .    f  e    f  .    f\n",
-    ".    f  e    f  .    f  e    f  .    f\n",
-    " gggg    gggg    ....    gggg    gggg\n",
-    "```\n",
-    "\n",
-    "So, to render a 1, only segments c and f would be turned on; the rest would be off. To render a 7, only segments a, c, and f would be turned on.\n",
-    "\n",
-    "The problem is that the signals which control the segments have been mixed up on each display. The submarine is still trying to display numbers by producing output on signal wires a through g, but those wires are connected to segments randomly. Worse, the wire/segment connections are mixed up separately for each four-digit display! (All of the digits within a display use the same connections, though.)\n",
-    "\n",
-    "So, you might know that only signal wires b and g are turned on, but that doesn't mean segments b and g are turned on: the only digit that uses two segments is 1, so it must mean segments c and f are meant to be on. With just that information, you still can't tell which wire (b/g) goes to which segment (c/f). For that, you'll need to collect more information.\n",
-    "\n",
-    "For each display, you watch the changing signals for a while, make a note of all ten unique signal patterns you see, and then write down a single four digit output value (your puzzle input). Using the signal patterns, you should be able to work out which pattern corresponds to which digit.\n",
-    "\n",
-    "For example, here is what you might see in a single entry in your notes:\n",
-    "\n",
-    "```\n",
-    "acedgfb cdfbe gcdfa fbcad dab cefabd cdfgeb eafb cagedb ab |\n",
-    "cdfeb fcadb cdfeb cdbaf\n",
-    "```\n",
-    "\n",
-    "(The entry is wrapped here to two lines so it fits; in your notes, it will all be on a single line.)\n",
-    "\n",
-    "Each entry consists of **ten unique signal patterns**, a | delimiter, and finally the **four digit output value**. Within an entry, the same wire/segment connections are used (but you don't know what the connections actually are). The unique signal patterns correspond to the ten different ways the submarine tries to render a digit using the current wire/segment connections. Because 7 is the only digit that uses three segments, dab in the above example means that to render a 7, signal lines d, a, and b are on. Because 4 is the only digit that uses four segments, eafb means that to render a 4, signal lines e, a, f, and b are on.\n",
-    "\n",
-    "Using this information, you should be able to work out which combination of signal wires corresponds to each of the ten digits. Then, you can decode the four digit output value. Unfortunately, in the above example, all of the digits in the output value (cdfeb fcadb cdfeb cdbaf) use five segments and are more difficult to deduce.\n",
-    "\n",
-    "For now, **focus on the easy digits**. Consider this larger example:\n",
-    "\n",
-    "```\n",
-    "be cfbegad cbdgef fgaecd cgeb fdcge agebfd fecdb fabcd edb |\n",
-    "fdgacbe cefdb cefbgd gcbe\n",
-    "edbfga begcd cbg gc gcadebf fbgde acbgfd abcde gfcbed gfec |\n",
-    "fcgedb cgb dgebacf gc\n",
-    "fgaebd cg bdaec gdafb agbcfd gdcbef bgcad gfac gcb cdgabef |\n",
-    "cg cg fdcagb cbg\n",
-    "fbegcd cbd adcefb dageb afcb bc aefdc ecdab fgdeca fcdbega |\n",
-    "efabcd cedba gadfec cb\n",
-    "aecbfdg fbg gf bafeg dbefa fcge gcbea fcaegb dgceab fcbdga |\n",
-    "gecf egdcabf bgf bfgea\n",
-    "fgeab ca afcebg bdacfeg cfaedg gcfdb baec bfadeg bafgc acf |\n",
-    "gebdcfa ecba ca fadegcb\n",
-    "dbcfg fgd bdegcaf fgec aegbdf ecdfab fbedc dacgb gdcebf gf |\n",
-    "cefg dcbef fcge gbcadfe\n",
-    "bdfegc cbegaf gecbf dfcage bdacg ed bedf ced adcbefg gebcd |\n",
-    "ed bcgafe cdgba cbgef\n",
-    "egadfb cdbfeg cegd fecab cgb gbdefca cg fgcdab egfdb bfceg |\n",
-    "gbdfcae bgc cg cgb\n",
-    "gcafb gcf dcaebfg ecagb gf abcdeg gaef cafbge fdbac fegbdc |\n",
-    "fgae cfgab fg bagce\n",
-    "```\n",
-    "\n",
-    "Because the digits 1, 4, 7, and 8 each use a unique number of segments, you should be able to tell which combinations of signals correspond to those digits. Counting only digits in the output values (the part after | on each line), in the above example, there are 26 instances of digits that use a unique number of segments (highlighted above).\n",
-    "\n",
-    "**In the output values, how many times do digits 1, 4, 7, or 8 appear**?"
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Some considerations for this one\n",
-    "For this first part, we don't need the information from what's from before the `|`. We only rely on the right-hand part of the problem. The number of letters in each part corresponds to the number of segments lit. For instance, for the last line in the above example, we have `fgae cfgab fg bagce` which has `[4 5 2 6]` letters. We know that 2 letters always correspond to a 1 because 2 segments are lit, we also know that 4 segments lit correspond to a 4 etc... As we only focus on the easy digits, this can be considered as a counting problem."
+    "## Some considerations for this one\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{6: 236, 5: 234, 2: 92, 4: 78, 3: 82, 7: 78}\n",
-      "The sum of 1, 4, 7 and 8 is 330\n"
+      "['[({(<(())[]>[[{[]{<()<>>', '[(()[<>])]({[<{<<[]>>(', '{([(<{}[<>[]}>{[]{[(<()>', '(((({<>}<{<{<>}{[]{[]{}', '[[<[([]))<([[{}[[()]]]', '[{[{({}]{}}([{[{{{}}([]', '{<[[]]>}<{[{[{[]{()[[[]', '[<(<(<(<{}))><([]([]()', '<{([([[(<>()){}]>(<<{{', '<{([{{}}[<[[[<>{}]]]>[]]']\n"
      ]
     }
    ],
@@ -110,36 +33,14 @@
     "from functools import reduce\n",
     "from collections import Counter\n",
     "\n",
-    "with open('input_day8.txt') as f:\n",
-    "    out = [x.split('|') for x in f.readlines()]\n",
+    "with open('input_day10_sample.txt') as f:\n",
+    "    out = [x.strip() for x in f.readlines()]\n",
     "\n",
-    "signal_pattern = []\n",
-    "output_value = []\n",
+    "print(out)\n",
     "\n",
-    "# Each element is a list with 2 elemnets\n",
-    "for x,y in out:\n",
-    "    signal_pattern.append(x.split())\n",
-    "    output_value.append(y.split())\n",
-    "\n",
-    "def flatten(list) -> list:\n",
-    "    return reduce(lambda l,r : l + r, list)\n",
-    "\n",
-    "#print(flatten_list(output_value))\n",
-    "\n",
-    "# Take the length of every output value, for all lines\n",
-    "l = [[len(val) for val in x] for x in output_value]\n",
-    "flat = flatten(l)\n",
-    "\n",
-    "# Now this is a bit tricky. Counter is a class for counting (!) elements in a dictionary with different hash values.\n",
-    "# It provides methods such as mostCommon, sorting etc...\n",
-    "count_dict = dict(Counter(flat))\n",
-    "\n",
-    "print(count_dict)\n",
-    "\n",
-    "# We have to count how many ones (2 segs), 4 (4 segs), 7 (3 segs) and 8 (7 segs) appear for every line.\n",
-    "res = sum([count_dict[val] for val in [2, 4, 3, 7]])\n",
-    "\n",
-    "print(f'The sum of 1, 4, 7 and 8 is {res}')"
+    "# 4 stacks, one for each symbol\n",
+    "# Push when open\n",
+    "# Pop when closed. If trying to pop when empty -> corrupt, don't think it's enough. More thinking required."
    ]
   }
  ],
