--- a/day10/day10.ipynb
+++ b/day10/day10.ipynb
@@ -4,28 +4,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 8: Seven Segment Search\n",
+    "# Day 10: Syntax scoring\n",
     "from [AdventOfCode website](https://adventofcode.com/2021])\n",
-    "\n"
+    "\n",
+    "You ask the submarine to determine the best route out of the deep-sea cave, but it only replies:\n",
+    "\n",
+    "Syntax error in navigation subsystem on line: all of them\n",
+    "All of them?! The damage is worse than you thought. You bring up a copy of the navigation subsystem (your puzzle input).\n",
+    "\n",
+    "The navigation subsystem syntax is made of several lines containing chunks. There are one or more chunks on each line, and chunks contain zero or more other chunks. Adjacent chunks are not separated by any delimiter; if one chunk stops, the next chunk (if any) can immediately start. Every chunk must open and close with one of four legal pairs of matching characters:\n",
+    "\n",
+    "- If a chunk opens with (, it must close with ).\n",
+    "- If a chunk opens with [, it must close with ].\n",
+    "- If a chunk opens with {, it must close with }.\n",
+    "- If a chunk opens with <, it must close with >.\n",
+    "\n",
+    "So, () is a legal chunk that contains no other chunks, as is []. More complex but valid chunks include `([])`, `{()()()}`, `<([{}])>`, `[<>({}){}[([])<>]]`, and even `(((((((((())))))))))`.\n",
+    "\n",
+    "Some lines are incomplete, but others are corrupted. Find and discard the corrupted lines first.\n",
+    "\n",
+    "A corrupted line is one where a chunk closes with the wrong character - that is, where the characters it opens and closes with do not form one of the four legal pairs listed above.\n",
+    "\n",
+    "Examples of corrupted chunks include `(]`, `{()()()>`, `(((()))}`, and `<([]){()}[{}])`. Such a chunk can appear anywhere within a line, and its presence causes the whole line to be considered corrupted.\n",
+    "\n",
+    "For example, consider the following navigation subsystem:\n",
+    "\n",
+    "```\n",
+    "[({(<(())[]>[[{[]{<()<>>\n",
+    "[(()[<>])]({[<{<<[]>>(\n",
+    "{([(<{}[<>[]}>{[]{[(<()>\n",
+    "(((({<>}<{<{<>}{[]{[]{}\n",
+    "[[<[([]))<([[{}[[()]]]\n",
+    "[{[{({}]{}}([{[{{{}}([]\n",
+    "{<[[]]>}<{[{[{[]{()[[[]\n",
+    "[<(<(<(<{}))><([]([]()\n",
+    "<{([([[(<>()){}]>(<<{{\n",
+    "<{([{{}}[<[[[<>{}]]]>[]]\n",
+    "```\n",
+    "\n",
+    "Some of the lines aren't corrupted, just incomplete; you can ignore these lines for now. The remaining five lines are corrupted:\n",
+    "\n",
+    "```\n",
+    "{([(<{}[<>[]}>{[]{[(<()> - Expected ], but found } instead.\n",
+    "[[<[([]))<([[{}[[()]]] - Expected ], but found ) instead.\n",
+    "[{[{({}]{}}([{[{{{}}([] - Expected ), but found ] instead.\n",
+    "[<(<(<(<{}))><([]([]() - Expected >, but found ) instead.\n",
+    "<{([([[(<>()){}]>(<<{{ - Expected ], but found > instead.\n",
+    "```\n",
+    "\n",
+    "Stop at the first incorrect closing character on each corrupted line.\n",
+    "\n",
+    "Did you know that syntax checkers actually have contests to see who can get the high score for syntax errors in a file? It's true! To calculate the syntax error score for a line, take the first illegal character on the line and look it up in the following table:\n",
+    "\n",
+    "- ): 3 points.\n",
+    "- ]: 57 points.\n",
+    "- }: 1197 points.\n",
+    "- >: 25137 points.\n",
+    "\n",
+    "In the above example, an illegal ) was found twice (2*3 = 6 points), an illegal ] was found once (57 points), an illegal } was found once (1197 points), and an illegal > was found once (25137 points). So, the total syntax error score for this file is 6+57+1197+25137 = 26397 points!\n",
+    "\n",
+    "Find the first illegal character in each corrupted line of the navigation subsystem. What is the total syntax error score for those errors?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Some considerations for this one\n"
+    "## Some considerations for this one\n",
+    "\n",
+    "One stack shall do it, push-down automaton style.\n",
+    "\n",
+    "- Push when open\n",
+    "- Pop when closed. If trying to pop when empty or not equal to the one top --> corrupt\n",
+    "- When this was done, we might have incomplete lines (that must contain only opening chars) --> incomplete\n",
+    "- If everything succedded --> complete"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['[({(<(())[]>[[{[]{<()<>>', '[(()[<>])]({[<{<<[]>>(', '{([(<{}[<>[]}>{[]{[(<()>', '(((({<>}<{<{<>}{[]{[]{}', '[[<[([]))<([[{}[[()]]]', '[{[{({}]{}}([{[{{{}}([]', '{<[[]]>}<{[{[{[]{()[[[]', '[<(<(<(<{}))><([]([]()', '<{([([[(<>()){}]>(<<{{', '<{([{{}}[<[[[<>{}]]]>[]]']\n"
+      "319233\n"
      ]
     }
    ],
@@ -33,14 +97,195 @@
     "from functools import reduce\n",
     "from collections import Counter\n",
     "\n",
-    "with open('input_day10_sample.txt') as f:\n",
+    "with open('input_day10.txt') as f:\n",
     "    out = [x.strip() for x in f.readlines()]\n",
     "\n",
-    "print(out)\n",
+    "from enum import Enum, auto\n",
     "\n",
-    "# 4 stacks, one for each symbol\n",
-    "# Push when open\n",
-    "# Pop when closed. If trying to pop when empty -> corrupt, don't think it's enough. More thinking required."
+    "class Status(Enum):\n",
+    "    CORRUPT = auto()\n",
+    "    INCOMPLETE = auto()\n",
+    "    COMPLETE = auto\n",
+    "\n",
+    "# Some helper function for debugging\n",
+    "def log(tuple):\n",
+    "    if tuple[0] == Status.COMPLETE:\n",
+    "        print('Line was complete and correct')\n",
+    "    if tuple[0] == Status.INCOMPLETE:\n",
+    "        print(f'Line was incomplete, the line is {tuple[3]}')\n",
+    "    if tuple[0] == Status.CORRUPT:\n",
+    "        print(f'Got {tuple[2]} but expected {tuple[1]}') \n",
+    "\n",
+    "def isCorrupt(line):\n",
+    "    from queue import LifoQueue\n",
+    "    stack = LifoQueue(1000)\n",
+    "\n",
+    "    for p in line:\n",
+    "        if p == '[' or p == '(' or p == '{' or p == '<':            \n",
+    "            stack.put(p)\n",
+    "        else:\n",
+    "            c = stack.get()            \n",
+    "            if p == ']':\n",
+    "                if c != '[':                    \n",
+    "                    return (Status.CORRUPT, c, p)\n",
+    "            if p == '}':\n",
+    "                if c != '{':\n",
+    "                    return (Status.CORRUPT, c, p)\n",
+    "            if p == ')':\n",
+    "                if c != '(':\n",
+    "                    return (Status.CORRUPT, c, p)\n",
+    "            if p == '>':\n",
+    "                if c != '<':\n",
+    "                    return (Status.CORRUPT, c, p)\n",
+    "\n",
+    "    if stack.empty():\n",
+    "        return (Status.COMPLETE, None, None)\n",
+    "\n",
+    "    # Check if incomplete    \n",
+    "    while stack.qsize() != 0:\n",
+    "        c = stack.get()\n",
+    "        if(c != '[' and c != '(' and c != '<' and c != '{'):\n",
+    "            return (Status.CORRUPT, c)\n",
+    "    \n",
+    "    return (Status.INCOMPLETE, None, None, line)\n",
+    "\n",
+    "def score(res):\n",
+    "    v = res[2] # Where the gotten value is\n",
+    "    if v == ')': return 3\n",
+    "    if v == ']': return 57\n",
+    "    if v == '}': return 1197\n",
+    "    if v == '>': return 25137\n",
+    "\n",
+    "filtered = [isCorrupt(x) for x in out]\n",
+    "wrongOnes = list(filter(lambda x: (x[0] == Status.CORRUPT), filtered))\n",
+    "score = sum(list(map(score, wrongOnes)))\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, discard the corrupted lines. The remaining lines are incomplete.\n",
+    "\n",
+    "Incomplete lines don't have any incorrect characters - instead, they're missing some closing characters at the end of the line. To repair the navigation subsystem, you just need to figure out the sequence of closing characters that complete all open chunks in the line.\n",
+    "\n",
+    "You can only use closing characters (), ], }, or >), and you must add them in the correct order so that only legal pairs are formed and all chunks end up closed.\n",
+    "\n",
+    "In the example above, there are five incomplete lines:\n",
+    "\n",
+    "```\n",
+    "[({(<(())[]>[[{[]{<()<>> - Complete by adding }}]])})].\n",
+    "[(()[<>])]({[<{<<[]>>( - Complete by adding )}>]}).\n",
+    "(((({<>}<{<{<>}{[]{[]{} - Complete by adding }}>}>)))).\n",
+    "{<[[]]>}<{[{[{[]{()[[[] - Complete by adding ]]}}]}]}>.\n",
+    "<{([{{}}[<[[[<>{}]]]>[]] - Complete by adding ])}>.\n",
+    "```\n",
+    "\n",
+    "Did you know that autocomplete tools also have contests? It's true! The score is determined by considering the completion string character-by-character. Start with a total score of 0. Then, for each character, multiply the total score by 5 and then increase the total score by the point value given for the character in the following table:\n",
+    "\n",
+    "- ): 1 point.\n",
+    "- ]: 2 points.\n",
+    "- }: 3 points.\n",
+    "- >: 4 points.\n",
+    "\n",
+    "So, the last completion string above - ])}> - would be scored as follows:\n",
+    "\n",
+    "- Start with a total score of 0.\n",
+    "- Multiply the total score by 5 to get 0, then add the value of ] (2) to get a new total score of 2.\n",
+    "- Multiply the total score by 5 to get 10, then add the value of ) (1) to get a new total score of 11.\n",
+    "- Multiply the total score by 5 to get 55, then add the value of } (3) to get a new total score of 58.\n",
+    "- Multiply the total score by 5 to get 290, then add the value of > (4) to get a new total score of 294.\n",
+    "\n",
+    "The five lines' completion strings have total scores as follows:\n",
+    "\n",
+    "```\n",
+    "}}]])})] - 288957 total points.\n",
+    ")}>]}) - 5566 total points.\n",
+    "}}>}>)))) - 1480781 total points.\n",
+    "]]}}]}]}> - 995444 total points.\n",
+    "])}> - 294 total points.\n",
+    "```\n",
+    "\n",
+    "Autocomplete tools are an odd bunch: the winner is found by sorting all of the scores and then taking the middle score. (There will always be an odd number of scores to consider.) In this example, the middle score is 288957 because there are the same number of scores smaller and larger than it.\n",
+    "\n",
+    "Find the completion string for each incomplete line, score the completion strings, and sort the scores. What is the middle score?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What was done\n",
+    "Here we take the same approach as in part 1 but as we know that we only have incomplete lines, the push-down automata logics is simplified. We shall not forget to remove the working pairs though!\n",
+    "\n",
+    "Computing the score is simply the application of some formulas, nothing special or beautiful here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1118976874\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the elements to be added to complete the stack\n",
+    "def complete(incomplete):\n",
+    "    from queue import LifoQueue\n",
+    "    stack = LifoQueue(1000)\n",
+    "\n",
+    "    # Rebuild a stack and remove the pairs that are complete\n",
+    "    for p in incomplete:\n",
+    "        if p == '[' or p == '(' or p == '{' or p == '<':            \n",
+    "            stack.put(p)\n",
+    "        else:\n",
+    "            c = stack.get()\n",
+    "\n",
+    "    missing = []\n",
+    "\n",
+    "    # Rebuild the missing stack symbols\n",
+    "    while stack.qsize() != 0:\n",
+    "        c = stack.get()\n",
+    "        missing.append(c)\n",
+    "\n",
+    "    # Replace the letters by their closing counterpart\n",
+    "    missing = \"\".join(missing)\n",
+    "    replace = {'(': ')', '<': '>', '{': '}', '[': ']'}\n",
+    "\n",
+    "    for x,y in replace.items():\n",
+    "        missing = missing.replace(x,y)\n",
+    "\n",
+    "    return missing\n",
+    "\n",
+    "def score2(list):\n",
+    "    s = 0    \n",
+    "    for elem in list:\n",
+    "        val = 1\n",
+    "        if elem == ']':\n",
+    "            val = 2\n",
+    "        if elem == '}':\n",
+    "            val = 3\n",
+    "        if elem == '>':\n",
+    "            val = 4\n",
+    "        \n",
+    "        s *= 5\n",
+    "        s += val\n",
+    "    return s\n",
+    "\n",
+    "# Take the incompletes values from part 1, which have the original line stored as well\n",
+    "incompletes = list(map(lambda x: x[3], list(filter(lambda x: (x[0] == Status.INCOMPLETE), filtered))))\n",
+    "\n",
+    "completions = [complete(x) for x in incompletes]\n",
+    "scores = [score2(x) for x in completions]\n",
+    "scores.sort()\n",
+    "print(scores[len(scores) // 2])"
    ]
   }
  ],
