Did some work today

--- a/day15/day15.ipynb
+++ b/day15/day15.ipynb
@@ -61,8 +61,7 @@
    ],
    "source": [
     "from __future__ import annotations\n",
-    "from functools import reduce, total_ordering\n",
-    "from collections import Counter\n",
+    "from functools import total_ordering\n",
     "from queue import PriorityQueue\n",
     "\n",
     "SAMPLE = \"input_day15_sample.txt\"\n",
@@ -138,7 +137,6 @@
     "\n",
     "def parse(lines : list[str]) -> dict[Pos, int]:\n",
     "    \"\"\"Build a dictionary mapping positions to costs\"\"\"\n",
-    "    # Enumerate for all values in lines the value of the cost\n",
     "    res = {Pos(x,y) : int(cost) \n",
     "                for y, line in enumerate(lines)\n",
     "                for x, cost in enumerate(line)}\n",
