--- a/day25/day25.ipynb
+++ b/day25/day25.ipynb
@@ -425,7 +425,7 @@
     "fig = plt.figure(figsize = (5,5))\n",
     "plt.tick_params(axis='both', colors='gray')\n",
     "plt.style.use('dark_background')\n",
-    "im = plt.imshow(data[0], aspect='auto', vmin=0, vmax=2, cmap='magma', origin='lower')\n",
+    "im = plt.imshow(data[0], aspect='auto', vmin=abs(data).min(), vmax=abs(data).max(), cmap='magma', origin='lower')\n",
     "\n",
     "def animate_func(i):\n",
     "    im.set_array(data[i])\n",
