Working on the pipeline

--- a/day14/day14.ipynb
+++ b/day14/day14.ipynb
@@ -95,7 +95,8 @@
     "    with open(fileName) as f:\n",
     "        template = f.readline().strip()\n",
     "        f.readline\n",
-    "        patterns = [x for x in f]\n",
+    "        patterns = f.read().splitlines()\n",
+    "        patterns = {}\n",
     "    return template, patterns\n",
     "\n",
     "SAMPLE_TEMPLATE, SAMPLE_PATTERNS = parse_input('input_day14_sample.txt')\n",
@@ -105,6 +106,8 @@
     "print(''.join(SAMPLE_PATTERNS))\n",
     "\n",
     "def part1_compute(template, patterns):\n",
+    "    # Split in pairs every template\n",
+    "    \n",
     "    return 0, 1588\n",
     "\n",
     "least_common, most_common = part1_compute(SAMPLE_TEMPLATE, SAMPLE_PATTERNS)\n",
